# measure-ai-drift

./: .gitignore  CLAUDE.md  DOTENV_FIX_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  README.md  README_FIRST.txt  SETUP_COMPLETE.txt  TEST_RESULTS.md  VALIDATION_SUMMARY.md  env.sample  promptfoo-dialogue-results.json  promptfoo-dialogue.yaml  promptfoo-results.json  promptfoo.yaml  pyproject.toml  requirements.txt  run  test_dialogue.json  verify_setup.py
docs/: PATIENT_AGENT_GUIDE.md  SOTA_LLMs.md  STYLE.md  TODO.md  alignment_approach_analysis.md  analysis.md  architecture_plan.md  bertscore_model_selection.md  citations.md  master.md  pipeline_flowcharts.md  plan_mechanism_analysis.md  run_bundle_example.md  statistics.md  strategy_taxonomy_evolution.md  thesis_TODO.md  thesis_extended_structure.md  thesis_models.md  thesis_outline.md  thesis_outline_old.md  thesis_proposal.md  thesis_structure.md  thesis_structure_3.md  thesis_structure_dynamic.md  thesis_structure_reviewed.md  thesis_structure_supervisor.md
old_versions/: irt_app.py  last_submit.md  model_options.py  models.py  thesis_structure_old.md
outputs/: dialogue_anxious_20260208_120910.json  dialogue_anxious_20260208_122312.json  dialogue_anxious_20260208_124343.json  dialogue_anxious_20260208_134040.json  dialogue_anxious_20260208_134305.json  dialogue_cooperative_20260123_182829.json  dialogue_cooperative_20260123_184330.json  dialogue_cooperative_20260123_191007.json  dialogue_cooperative_20260123_192208.json  dialogue_skeptic_20260208_114811.json  dialogue_skeptic_20260208_115055.json  (+1 more)
src/: __main__.py  (+1 more)
(+120 files in other folders)
